@@ -62,133 +62,161 @@ public class DemoApplication {
 	@Bean
 	CommandLineRunner commandLineRunner(){
 		return args -> {
+			companySeeder();
+			funeralserviceSeeder();
+			contactSeeder();
 			officeSeeder();
 		};
 	}
 
-	public void officeSeeder(){
-		String tel = "Telefon";
-		String mobil = "Mobil";
-		String email = "Email";
-		String officemanager = "Iroda Vezető";
-		String halottszal = "Halottszállítás";
+	public void funeralserviceSeeder(){
+		if (funeralServiceRepository.count() == 0 ) {
+			ArrayList<FuneralService> funeralServices = new ArrayList<>();
+			funeralServices.add(new FuneralService("Hamvasztás urnakiadás", "hamvurn", ""));
+			funeralServices.add(new FuneralService("Hamvak szórása", "hamvszor", ""));
+			funeralServices.add(new FuneralService("Hamvasztásos temetés", "hamvtem", ""));
+			funeralServices.add(new FuneralService("Hajós temetés", "hajtem", ""));
+			funeralServices.add(new FuneralService("Koporsós temetés", "koptem", ""));
+			funeralServices.add(new FuneralService("Halottszállítás", "halszal", ""));
+			funeralServices.add(new FuneralService("Nemzetközi temetés", "nemtem", ""));
+			funeralServiceRepository.saveAll(funeralServices);
+		}
+	}
 
+	public void contactSeeder(){
 		if (contactRepository.count() == 0){
+			String tel = "Telefon";
+			String mobil = "Mobil";
+			String email = "Email";
+			String officemanager = "Iroda Vezető";
+			String halottszal = "Halottszállítás";
+
+			String p = "phone";
+			String e = "email";
+
 
 			ArrayList<Contact> contacts = new ArrayList<>();
 			//0
-			contacts.add(new Contact(tel,"+3614136800","aevumdem"));
+			contacts.add(new Contact(tel,"+3614136800","aevumdem",p));
 			//1
-			contacts.add(new Contact(tel,"+3614301390","aevumbecsi"));
+			contacts.add(new Contact(tel,"+3614301390","aevumbecsi",p));
 			//2
-			contacts.add(new Contact(tel, "+3619190884","aevumarpad"));
+			contacts.add(new Contact(tel, "+3619190884","aevumarpad",p));
 			//3
-			contacts.add(new Contact(tel, "+3612370240","aevumpap"));
+			contacts.add(new Contact(tel, "+3612370240","aevumpap",p));
 			//4
-			contacts.add(new Contact(email,"info@aveum.hu","aevumdem"));
+			contacts.add(new Contact(email,"info@aveum.hu","aevumdem",e));
 			//5
-			contacts.add(new Contact(email,"becsiut@aveum.hu","aevumbecsi"));
+			contacts.add(new Contact(email,"becsiut@aveum.hu","aevumbecsi",e));
 			//6
-			contacts.add(new Contact(email,"arpadut@aveum.hu","aevumarpad"));
+			contacts.add(new Contact(email,"arpadut@aveum.hu","aevumarpad",e));
 			//7
-			contacts.add(new Contact(email,"papkarolyutca@aveum.hu","aevumpap"));
+			contacts.add(new Contact(email,"papkarolyutca@aveum.hu","aevumpap",e));
 			//8
-			contacts.add(new Contact(mobil, "+36703121383","aevumdeb"));
+			contacts.add(new Contact(mobil, "+36703121383","aevumdem",p));
 			//9
-			contacts.add(new Contact(mobil, "+36305767216","aevumbecsi"));
+			contacts.add(new Contact(mobil, "+36305767216","aevumbecsi",p));
 			//10
-			contacts.add(new Contact(mobil, "+36306645758","aevumarpad"));
+			contacts.add(new Contact(mobil, "+36306645758","aevumarpad",p));
 			//11
-			contacts.add(new Contact(mobil, "+36302535258","aevumpap"));
+			contacts.add(new Contact(mobil, "+36302535258","aevumpap",p));
 			//12
 			contacts.add(new Contact(officemanager, "Tóth-Vass Réka","aevumdem"));
 			//13
 			contacts.add(new Contact(officemanager, "Wéber Szandra","aevumbecsi"));
 			//14
-			contacts.add(new Contact(officemanager,"Ostorházy Barbara","aveumarpad"));
+			contacts.add(new Contact(officemanager,"Ostorházy Barbara","aevumarpad"));
 			//15
-			contacts.add(new Contact(officemanager,"Reményi Árpád","aveumpap"));
+			contacts.add(new Contact(officemanager,"Reményi Árpád","aevumpap"));
 			//16
-			contacts.add(new Contact(tel, "+3619190170","szomiz"));
+			contacts.add(new Contact(tel, "+3619190170","szomiz",p));
 			//17
-			contacts.add(new Contact(mobil, "+36308471915","szomiz"));
+			contacts.add(new Contact(mobil, "+36308471915","szomiz",p));
 			//18
-			contacts.add(new Contact(tel,"+3619190171","szompest"));
+			contacts.add(new Contact(tel,"+3619190171","szompest",p));
 			//19
-			contacts.add(new Contact(mobil, "+36303137920","szompest"));
+			contacts.add(new Contact(mobil, "+36303137920","szompest",p));
 			//20
-			contacts.add(new Contact(tel, "+3619190886","lelek"));
+			contacts.add(new Contact(tel, "+3619190886","lelek",p));
 			//21
-			contacts.add(new Contact(mobil,"+36302032300","lelek"));
+			contacts.add(new Contact(mobil,"+36302032300","lelek",p));
 			//22
-			contacts.add(new Contact(tel,"+3619190172","szomtok"));
+			contacts.add(new Contact(tel,"+3619190172","szomtok",p));
 			//23
-			contacts.add(new Contact(mobil,"+36309651783","szomtok"));
+			contacts.add(new Contact(mobil,"+36309651783","szomtok",p));
 			//24
-			contacts.add(new Contact(tel,"+3619190173","szomsziv"));
+			contacts.add(new Contact(tel,"+3619190173","szomsziv",p));
 			//25
-			contacts.add(new Contact(mobil,"+36305767206","szomsziv"));
+			contacts.add(new Contact(mobil,"+36305767206","szomsziv",p));
 			//26
-			contacts.add(new Contact(email, "budapest@temetkezes.hu","szomiz"));
+			contacts.add(new Contact(email, "budapest@temetkezes.hu","szomiz",e));
 			//27
-			contacts.add(new Contact(email, "budapest@temetkezes.hu","szompest"));
+			contacts.add(new Contact(email, "budapest@temetkezes.hu","szompest",e));
 			//28
-			contacts.add(new Contact(email, "budapest@temetkezes.hu","lelek"));
+			contacts.add(new Contact(email, "budapest@temetkezes.hu","lelek",e));
 			//29
-			contacts.add(new Contact(email, "budapest@temetkezes.hu","szomtok"));
+			contacts.add(new Contact(email, "budapest@temetkezes.hu","szomtok",e));
 			//30
-			contacts.add(new Contact(email, "budapest@temetkezes.hu","szomsziv"));
+			contacts.add(new Contact(email, "budapest@temetkezes.hu","szomsziv",e));
 			//31
-			contacts.add(new Contact(tel,"+3617969561","gyaszbu"));
+			contacts.add(new Contact(tel,"+3617969561","gyaszbu",p));
 			//32
-			contacts.add(new Contact(mobil,"+36308798970","gyaszbu"));
+			contacts.add(new Contact(mobil,"+36308798970","gyaszbu",p));
 			//33
-			contacts.add(new Contact(email,"info@gyaszhuszar.hu","gyaszbu"));
+			contacts.add(new Contact(email,"info@gyaszhuszar.hu","gyaszbu",e));
 			//34
-			contacts.add(new Contact(tel,"+3617202236","gyaszlen"));
+			contacts.add(new Contact(tel,"+3617202236","gyaszlen",p));
 			//35
-			contacts.add(new Contact(mobil,"+36306335677","gyaszlen"));
+			contacts.add(new Contact(mobil,"+36306335677","gyaszlen",p));
 			//36
-			contacts.add(new Contact(email,"info@gyaszhuszar.hu","gyaszlen"));
+			contacts.add(new Contact(email,"info@gyaszhuszar.hu","gyaszlen",e));
 			//37
-			contacts.add(new Contact(mobil, "+36309476637","szomdeb"));
+			contacts.add(new Contact(mobil, "+36309476637","szomdeb",p));
 			//38
-			contacts.add(new Contact(tel, "+3652871328","szomdeb"));
+			contacts.add(new Contact(tel, "+3652871328","szomdeb",p));
 			//39
-			contacts.add(new Contact(email,"debrecen@temetkezes.hu","szomdeb"));
+			contacts.add(new Contact(email,"debrecen@temetkezes.hu","szomdeb",e));
 			//40
-			contacts.add(new Contact(tel,"+3632431544","rexsal"));
+			contacts.add(new Contact(tel,"+3632431544","rexsal",p));
 			//41
-			contacts.add(new Contact(mobil,"+36309552137","rexsal"));
+			contacts.add(new Contact(mobil,"+36309552137","rexsal",p));
 			//42
-			contacts.add(new Contact(halottszal,"+36309552138","rexsal"));
+			contacts.add(new Contact(halottszal,"+36309552138","rexsal",p));
 			//43
-			contacts.add(new Contact(email,"info@rexhumanum.hu","rexsal"));
+			contacts.add(new Contact(email,"info@rexhumanum.hu","rexsal",e));
 			//44
 			contacts.add(new Contact(officemanager,"Szilágyi Barnabás","rexsal"));
 			//45
-			contacts.add(new Contact(tel, "+3642781227","szomnyir"));
+			contacts.add(new Contact(tel, "+3642781227","szomnyir",p));
 			//46
-			contacts.add(new Contact(mobil, "+36309932110","szomnyir"));
+			contacts.add(new Contact(mobil, "+36309932110","szomnyir",p));
 			//47
-			contacts.add(new Contact(email, "nyiregyhaza@temetkezes.hu","szomnyir"));
+			contacts.add(new Contact(email, "nyiregyhaza@temetkezes.hu","szomnyir",e));
 			//48
-			contacts.add(new Contact(email, "bekescsaba@temetkezes.hu","bekes"));
+			contacts.add(new Contact(email, "bekescsaba@temetkezes.hu","bekes",e));
 			//49
-			contacts.add(new Contact(tel,"+3666748088","bekes"));
+			contacts.add(new Contact(tel,"+3666748088","bekes",p));
 			//50
-			contacts.add(new Contact(mobil,"+36300846462","bekes"));
+			contacts.add(new Contact(mobil,"+36300846462","bekes",p));
 
 			contactRepository.saveAll(contacts);
 		}
+	}
 
-
+	public void companySeeder(){
 		if ( companyRepository.count() == 0){
 			ArrayList<Company> companies = new ArrayList<>();
 			companies.add(new Company("Szomorúfűz Temetkezés","szomfuz"));
 			companies.add(new Company("Aevum Temetkezés","aevum"));
+			companies.add(new Company("Gyászhuszár Temetkezés","gyaszhusz"));
+			companies.add(new Company("Rex-Humánum Temetkezés","rex"));
+			companies.add(new Company("Békés Temetkezés","bekes"));
+
 			companyRepository.saveAll(companies);
 		}
+	}
+
+	public void officeSeeder(){
 
 		if (officeRepository.count() == 0) {
 			ArrayList<Office> offices = new ArrayList<>();
@@ -204,11 +232,14 @@ public class DemoApplication {
 					"Budapest",
 					"Dembinszky utca 44.",
 					"hu-bu",
-					companyRepository.findAll().get(1),
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("aevum")
+					).toList().getFirst(),
 					"https://aevumtemetkezes.hu",
-
-					)
-			);
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("aevumdem")
+					).toList()
+			));
 			offices.add(new Office(
 					"Aevum Temtkezés - Árpád",
 					"aevumarpad",
@@ -221,10 +252,13 @@ public class DemoApplication {
 					"Budapest",
 					"Árpád út 88.",
 					"hu-bu",
-					companyRepository.findAll().stream().filter(company -> company.getShortName().equals("aevum")).toList().getFirst(),
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("aevum")
+					).toList(
+					).getFirst(),
 					"https://aevumtemetkezes.hu",
-					contactRepository.findAll().stream().filter(company ->
-						company.getOfficeShortCode().equals("aevumarpad")
+					contactRepository.findAll().stream().filter(contact ->
+						contact.getOfficeShortCode().equals("aevumarpad")
 					).toList()
 			));
 			offices.add(new Office(
@@ -239,8 +273,14 @@ public class DemoApplication {
 					"Budapest",
 					"Izabella utca 65.",
 					"hu-bu",
-					companyRepository.findAll().get(1),
-					"https://www.budapest-temetkezes.hu/"
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("szomfuz")
+					).toList(
+					).getFirst(),
+					"https://www.budapest-temetkezes.hu/",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("szomiz")
+					).toList()
 					));
 			offices.add(new Office(
 					"Szomorúfűz Temetkezés - Pesti út",
@@ -254,8 +294,13 @@ public class DemoApplication {
 					"Budapest",
 					"Pesti út 41/A.",
 					"hu-bu",
-					companyRepository.findAll().stream().filter(company -> company.getShortName().equals("szomfuz")).toList().getFirst(),
-					"https://www.budapest-temetkezes.hu"
+					companyRepository.findAll()
+							.stream().filter(company -> company.getShortName().equals("szomfuz")).toList().getFirst(),
+					"https://www.budapest-temetkezes.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("szompest")
+					).toList()
+
 			));
 			offices.add(new Office(
 					"Gyászhuszár Temetkezés - Lenhossék",
@@ -269,8 +314,12 @@ public class DemoApplication {
 					"Budapest",
 					"Lenhossék utca 33.",
 					"hu-bu",
-					companyRepository.findAll().get(1),
-					"https://www.gyaszhuszar.hu"
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("gyaszhusz")
+					).toList().getFirst(),					"https://www.gyaszhuszar.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("gyaszlen")
+					).toList()
 			));
 			offices.add(new Office(
 					"Gyászhuszár Temetkezés - Budai",
@@ -284,8 +333,13 @@ public class DemoApplication {
 					"Budapest",
 					"Villanyi út 6.",
 					"hu-bu",
-					companyRepository.findAll().get(1),
-					"https://www.gyaszhuszar.hu"
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("gyaszhusz")
+					).toList().getFirst(),
+					"https://www.gyaszhuszar.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("gyaszbu")
+					).toList()
 
 			));
 			offices.add(new Office(
@@ -300,8 +354,13 @@ public class DemoApplication {
 					"Budapest",
 					"Ernő u. 30-34.",
 					"hu-bu",
-					companyRepository.findAll().get(1),
-					"https://www.budapest-temetkezes.hu"
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("szomfuz")
+					).toList().getFirst(),
+					"https://www.budapest-temetkezes.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("szomer")
+					).toList()
 			));
 			offices.add(new Office(
 					"Lélekhajó Temetkezés",
@@ -315,8 +374,13 @@ public class DemoApplication {
 					"Budapest",
 					"Nagyenyed u. 1",
 					"hu-bu",
-					companyRepository.findAll().get(0),
-					"https://www.budapest-temetkezes.hu"
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("szomfuz")
+					).toList().getFirst(),
+					"https://lelekhajotemetkezes.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("lelek")
+					).toList()
 
 			));
 
@@ -332,9 +396,13 @@ public class DemoApplication {
 					"Budapest",
 					"Thököly út 167.",
 					"hu-bu",
-					companyRepository.findAll().get(1),
-					"https://www.budapest-temetkezes.hu"
-
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("szomfuz")
+					).toList().getFirst(),
+					"https://www.budapest-temetkezes.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("szomtok")
+					).toList()
 			));
 			offices.add(new Office(
 					"Szomorúfűz Temetkézés - Szivacs",
@@ -348,9 +416,13 @@ public class DemoApplication {
 					"Budapest",
 					"Szivacs utca 5.",
 					"hu-bu",
-					companyRepository.findAll().get(1),
-					"https://www.budapest-temetkezes.hu/"
-
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("szomfuz")
+					).toList().getFirst(),
+					"https://www.budapest-temetkezes.hu/",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("szomsziv")
+					).toList()
 			));
 			offices.add(new Office(
 					"Aevum - Pap Károly",
@@ -364,9 +436,14 @@ public class DemoApplication {
 					"Budapest",
 					"Pap Károly u. 5.",
 					"hu-bu",
-					companyRepository.findAll().get(1),
-					"https://aevumtemetkezes.hu"
-
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("aevum")
+					).toList(
+					).getFirst(),
+					"https://aevumtemetkezes.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("aevumpap")
+					).toList()
 			));
 			offices.add(new Office(
 					"Aevum Temetkezés - Bécsi",
@@ -380,8 +457,14 @@ public class DemoApplication {
 					"Budapest",
 					"Bécsi út 143.",
 					"hu-bu",
-					companyRepository.findAll().get(1),
-					"https://aevumtemetkezes.hu"
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("aevum")
+					).toList(
+					).getFirst(),
+					"https://aevumtemetkezes.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("aevumbecsi")
+					).toList()
 
 			));
 			offices.add(new Office(
@@ -396,8 +479,14 @@ public class DemoApplication {
 					"Debrecen",
 					"Csapó u. 53",
 					"hu-de",
-					companyRepository.findAll().get(1),
-					"https://debrecen.temetkezes.hu"
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("szomfuz")
+					).toList(
+					).getFirst(),
+					"https://debrecen.temetkezes.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("szomdeb")
+					).toList()
 
 			));
 			offices.add(new Office(
@@ -412,8 +501,13 @@ public class DemoApplication {
 					"Salgótarján",
 					"Füleki út 12.",
 					"hu-no",
-					companyRepository.findAll().get(1),
-					"https://www.rexhumanum.hu"
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("rex")
+					).toList().getFirst(),
+					"https://www.rexhumanum.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("rexsal")
+					).toList()
 			));
 			offices.add(new Office(
 					"Szomorúfűz Temetkezés - Nyíregyháza",
@@ -427,8 +521,14 @@ public class DemoApplication {
 					"Nyíregyháza",
 					"Dózsa György u. 70.",
 					"hu-ny",
-					companyRepository.findAll().get(1),
-					"https://nyiregyhaza.temetkezes.hu"
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("szomfuz")
+					).toList(
+					).getFirst(),
+					"https://nyiregyhaza.temetkezes.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("szomnyir")
+					).toList()
 			));
 			offices.add(new Office(
 					"Békéscsaba Temetkezés",
@@ -442,8 +542,13 @@ public class DemoApplication {
 					"Békéscsaba",
 					"Munkácsy utca 9.",
 					"hu-bc",
-					companyRepository.findAll().get(1),
-					"https://www.bekestemetkezes.hu"
+					companyRepository.findAll().stream().filter(
+							company -> company.getShortName().equals("bekes")
+					).toList().getFirst(),
+					"https://www.bekestemetkezes.hu",
+					contactRepository.findAll().stream().filter(contact ->
+							contact.getOfficeShortCode().equals("bekes")
+					).toList()
 			));
 
 			officeRepository.saveAll(offices);
@@ -462,17 +567,7 @@ public class DemoApplication {
 			user.setActive(true);
 			userRepository.save(user);
 		}
-		if (funeralServiceRepository.count() == 0 ) {
-			ArrayList<FuneralService> funeralServices = new ArrayList<>();
-			funeralServices.add(new FuneralService("Hamvasztás urnakiadás", "hamvurn", ""));
-			funeralServices.add(new FuneralService("Hamvak szórása", "hamvszor", ""));
-			funeralServices.add(new FuneralService("Hamvasztásos temetés", "hamvtem", ""));
-			funeralServices.add(new FuneralService("Hajós temetés", "hajtem", ""));
-			funeralServices.add(new FuneralService("Koporsós temetés", "koptem", ""));
-			funeralServices.add(new FuneralService("Halottszállítás", "halszal", ""));
-			funeralServices.add(new FuneralService("Nemzetközi temetés", "nemtem", ""));
-			funeralServiceRepository.saveAll(funeralServices);
-		}
+
 
 
 	}
